@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6372 2004/06/28 14:23:12 jmmv Exp $
+$NetBSD: CHANGES,v 1.6373 2004/06/28 14:33:47 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3135,3 +3135,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gnome-desktop to 2.6.2 [jmmv 2004-06-28]
 	Updated gnome-icon-theme to 1.2.3 [jmmv 2004-06-28]
 	Updated gnome-netstatus to 2.6.2 [jmmv 2004-06-28]
+	Updated pkglint to 3.82 [hubertf 2004-06-28]
